--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(/css/reset.css);
+@import url(/css/main.css);
 
 #background {
     background-color: antiquewhite;
@@ -13,37 +14,25 @@ header {
     display: flex;
     justify-content: center;
 }
+
 #first {
     position: relative;
 }
 #first:hover {
     opacity: 0;
     cursor: pointer;
-    transition-duration: 0.3s;
+    transition-duration: 0.5s;
 }
 #second {
     position:absolute;
-    transition: opacity 5s ease-in-out;
-}
-main {
-    margin: 70px 300px 0px 300px;
 }
 h1 {
-    font-size:4em;
+    font-size:7em;
     text-align: center;
-    color: rgb(189, 55, 55);
+    color: rgb(41, 41, 41);
     font-family:fantasy;
-    -webkit-text-stroke: 2px rgb(0, 0, 0);
     position: relative;
 }
-h2 {
-    padding: 20px;
-    border-radius: 20px;
-    background-color: rgba(163, 20, 20, 0.319);
-    text-align: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 2em;
-}
-p {
-    font-family: Calibri, 'Trebuchet MS', sans-serif;
+b {
+    color: rgb(189, 55, 55);
 }
