--- a/css/main.css
+++ b/css/main.css
@@ -24,5 +24,10 @@ p {
     font-weight: 100;
     text-align:justify;
     padding: 30px;
-    margin-right: 50%;
+    display: flex;
+}
+p > img {
+    width:40%;
+    height:40%;
+    box-align: left;
 }
